<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.terracotta.custom.utils</groupId>
    <artifactId>terracotta-verification</artifactId>
    <version>1.0.0</version>
    <name>Terracotta Verification App</name>
    <description>Terracotta Verification App</description>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>4.11</junit.version>
        <slf4j.version>1.6.1</slf4j.version>
    </properties>

    <developers>
        <developer>
            <id>fsanglie</id>
            <name>Fabien Sanglier</name>
            <email>fsanglie@terracottatech.com</email>
            <url>http://www.terracotta.org</url>
            <organization>Terracotta, Inc.</organization>
            <organizationUrl>http://www.terracotta.org</organizationUrl>
            <timezone>-6</timezone>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

        <!-- SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.7</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/appassembler/conf</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.3.1</version>
                <executions>
                    <execution>
                        <id>assemble</id>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <platforms>
                        <platform>all</platform>
                    </platforms>
                    <configurationDirectory>conf</configurationDirectory>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <repositoryLayout>flat</repositoryLayout>
                    <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <!--<useWildcardClassPath>true</useWildcardClassPath>-->
                    <extraJvmArguments>-Xms1g -Xmx2g -XX:MaxPermSize=512m
                        -XX:+UseParallelOldGC -XX:+UseCompressedOops
                        -XX:MaxDirectMemorySize=20G
                        -Dcom.tc.productkey.path=${user.home}/terracotta-license.key
                        -Dehcache.config.path=${net.sf.ehcache.configurationResourceName}
                        -Dtc.connect.url=tclocal:9510,tclocal:9610
                        -Dehcache.config.cachename=Customers
                    </extraJvmArguments>
                    <programs>
                        <program>
                            <mainClass>org.terracotta.utils.Launcher</mainClass>
                            <name>Launcher</name>
                        </program>
                    </programs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>ehcache-2.6</id>
            <properties>
                <ehcache-core-ee.version>2.6.8</ehcache-core-ee.version>
                <ehcache-terracotta-ee.version>2.6.8</ehcache-terracotta-ee.version>
                <slf4j.version>1.6.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache3x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-core-ee</artifactId>
                    <version>${ehcache-core-ee.version}</version>
                </dependency>

                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-terracotta-ee</artifactId>
                    <version>${ehcache-terracotta-ee.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.7</id>
            <properties>
                <ehcache-ee.version>2.7.5</ehcache-ee.version>
                <toolkit-ee.version>4.0.5</toolkit-ee.version>
                <slf4j.version>1.7.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache-ee.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit-ee.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.8</id>
            <properties>
                <ehcache-ee.version>2.8.5</ehcache-ee.version>
                <toolkit-ee.version>4.1.5</toolkit-ee.version>
                <slf4j.version>1.7.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache-ee.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit-ee.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.9</id>
            <properties>
                <ehcache-ee.version>2.9.1</ehcache-ee.version>
                <toolkit-ee.version>4.2.1</toolkit-ee.version>
                <slf4j.version>1.7.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache-ee.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit-ee.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.10-oss</id>
            <properties>
                <ehcache.version>2.10.0</ehcache.version>
                <toolkit.version>4.3.0</toolkit.version>
                <slf4j.version>1.7.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x-oss.xml</net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ehcache-2.10-ee</id>
            <properties>
                <ehcache.version>2.10.4.3.15</ehcache.version>
                <toolkit.version>4.3.4.3.15</toolkit.version>
                <slf4j.version>1.7.1</slf4j.version>
                <net.sf.ehcache.configurationResourceName>classpath:ehcache4x.xml
                </net.sf.ehcache.configurationResourceName>
            </properties>
            <dependencies>
                <!-- EhCache -->
                <dependency>
                    <groupId>net.sf.ehcache</groupId>
                    <artifactId>ehcache-ee</artifactId>
                    <version>${ehcache.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.terracotta</groupId>
                    <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                    <version>${toolkit.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
